feat: 시간표 들어있는 강의실 목록 api 추가
